# ,----------------------------------------------------------------------.
# |                                                                      |
# | sc68-ng -- Makefile.am -- Use with automake to produce configure.in  | 
# |                                                                      |
# |	       Copyright (C) 2007-2009 Benjamin Gerard                   |
# |                                                                      |
# |          <benjihan -4t- users.sourceforge -d0t- net>                 |
# |                                                                      |
# `----------------------------------------------------------------------'
# @configure_input@
# $Id: Makefile.am,v 1.2 2007/01/12 09:28:14 benjihan Exp $

ACLOCAL_AMFLAGS = -I m4 --install

ALL_SUBDIRS = as68 desa68 unice68 file68 info68 sourcer68 libsc68	\
mksc68 cdbg68 sc68

DIST_SUBDIRS = $(SUBDIRS)
SUBDIRS      = $(subdirs)
EXTRA_DIST   = sc68.el README-SVN
