# ,----------------------------------------------------------------------.
# |                                                                      |
# | sc68-ng -- Makefile.am -- Use with automake to produce configure.in  | 
# |                                                                      |
# |	       Copyright (C) 2007-2013 Benjamin Gerard                   |
# |                                                                      |
# |            <https://sourceforge.net/users/benjihan>                  |
# |                                                                      |
# `----------------------------------------------------------------------'
# @configure_input@
# $Id: Makefile.am,v 1.2 2007/01/12 09:28:14 benjihan Exp $

ACLOCAL_AMFLAGS = -I m4 --install

ALL_SUBDIRS = as68 desa68 file68 info68 libsc68 mksc68 sc68 sourcer68	\
unice68 sc68-audacious sc68-doc sc68-fb2k sc68-gst sc68-msvc sc68-nsi	\
sc68-vlc

DIST_SUBDIRS = $(SUBDIRS)
SUBDIRS      = $(subdirs)
EXTRA_DIST   = sc68.el README-SVN
