# ,----------------------------------------------------------------------.
# |                                                                      |
# |  cgdb68 -- Makefile.am -- Use with automake to produce Makefile.in   |
# |                                                                      |
# |            Copyright (C) 2006-2009 Benjamin Gerard                   |
# |          <benjihan -4t- users.sourceforge -d0t- net>                 |
# |                                                                      |
# `----------------------------------------------------------------------'
# $Id: Makefile.am 102 2009-03-14 17:21:58Z benjihan $
# @configure_input@

SUBDIRS         = src
ACLOCAL_AMFLAGS = -I m4 --install
