# ,----------------------------------------------------------------------.
# |                                                                      |
# |  cgdb68 -- Makefile.am -- Use with automake to produce Makefile.in   |
# |                                                                      |
# |               Copyright (C) 2009-2015 Benjamin Gerard                |
# |                                                                      |
# |               <http://sourceforge.net/users/benjihan>                |
# |                                                                      |
# `----------------------------------------------------------------------'
# @configure_input@

SUBDIRS         = src
ACLOCAL_AMFLAGS = -I m4 --install
