# ,----------------------------------------------------------------------.
# |                                                                      |
# |  cgdb68 -- Makefile.am -- Use with automake to produce Makefile.in   |
# |                                                                      |
# |               Copyright (c) 2009-2016 Benjamin Gerard                |
# |                                                                      |
# |               <http://sourceforge.net/users/benjihan>                |
# |                                                                      |
# `----------------------------------------------------------------------'
# @configure_input@

SUBDIRS         = src
ACLOCAL_AMFLAGS = -I m4 --install
